--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -29,7 +29,7 @@
       headers: {
         'Content-Type': 'application/json'
       },
-        body: JSON.stringify({ feedback: feedbackText })
+        body: ({ feedback: feedbackText })
     })
     .then(response => {
       if (response.ok) {
