--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -1,35 +1,35 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    {% include "header.html" %}
 
-{% include "header.html" %}
+    <div class="alerts-container">
+        <h1 class="alerts-header">Parking Locations and Capacities</h1>
+        <table class="table table-striped" id="alerts-list">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Capacity</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for location in alertData %}
+                <tr class="alerts-list">
+                    <td>{{ location[1] }}</td>
+                    <td>{{ location[6] }}%</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-<div class="container">
-    <h1>Parking Locations and Capacities</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Capacity</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for location in alertData %}
-            <tr>
-                <td>{{ location[1] }}</td>
-                <td>{{ location[6] }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
 
-{% include "footer.html" %}
 
-<script>
-    function goHome() {
-        window.location.href="/home";
-    }
-</script>
+    <script>
+        function goHome() {
+            window.location.href="/home";
+        }
+    </script>
 
+    {% include "footer.html" %}
 {% endblock %}
