Edited styling for alerts page

--- a/static/styles/alerts.css
+++ b/static/styles/alerts.css
@@ -1,23 +1,40 @@
 .alerts-container {
     width: 75%;
-    margin: 0 auto;
+    margin: auto;
     background-color: #1C732F;
-    border-radius: 20px;
+    border-radius: 50px;
     padding: 20px; 
+    margin-bottom: 50px;
+    margin-top: 50px;
+    
 }
 
 .alerts-header {
-    margin: 10px;
+    margin-top: 20px;
     color: #C9E03C; 
+    margin-bottom: 50px;
+    text-align: right;
+    width: 75%;
+    margin: 0 auto;
 }
 
 #alerts-list {
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    width: 50%;
+    margin: auto;
 }
 
 #alerts-list th {
-    color: white;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    text-align: left;
+}
+.capacity-header{
+    margin-right: auto;
+    
 }
 
 .alerts-list {
@@ -30,20 +47,9 @@
 
 .alerts-list td {
     padding: 10px;
+    text-align:left;
 }
 
-.add-alerts-button-container {
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
 
-.add-alerts-button {
-    justify-content: center;
-}
 
-.empty-data-header {
-    text-align: center;
-    color: #C9E03C;
-    margin-top: 20px; 
-}
+
