--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -8,8 +8,8 @@
         <table class="table table-striped" id="alerts-list">
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Capacity</th>
+                    <th>Name:</th>
+                    <th class = "capacity-header">Capacity:</th>
                 </tr>
             </thead>
             <tbody>
