remove profile, changed current position

--- a/templates/interactive_map.html
+++ b/templates/interactive_map.html
@@ -168,7 +168,7 @@
         }
         let mapOptions = {
             zoom:15,
-            center: { lat: 35.308117252580544, lng: -80.7337048813489 }
+            center: current
         }
         map = new Map(document.getElementById('google-map-container'), mapOptions);
 
