--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -13,7 +13,7 @@
   </h1>
 </div>
 <div class="feedback-container">
-  <form id="feedbackForm">
+  <form id="feedbackForm" method="POST">
     <textarea id="feedback" name="feedback" rows="8" cols="50" placeholder="How can we help you?"></textarea><br><br>
     <input type="button" value="Submit" onclick="submitFeedback()">
   </form>
