--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -33,7 +33,7 @@
     $.ajax({
       type: 'POST', //sending the post
       url: '/feedback',
-      data: { "feedback": feedback, "email": profileData[4], "time": Date.now() },
+      data: { "feedback": feedback, "email": profileData[4], "time": new Date(Date.now()).toISOString() },
       contentType: 'application/json;charset=UTF-8',
       dataType: 'json',
       success: function (data) {
