--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -233,9 +233,20 @@ input, select {
     font-size: 20px;
 }
 .route-selection-container .parking-type-container {
-    float: right;
-    margin-right: 32%;
+    float: left;
     margin-top: 2rem;
+    width: 45%;
+}
+.route-selection-container .parking-type-container label {
+    display: block;
+    margin-bottom: .5rem;
+
+}
+.route-selection-container .parking-type-container #parking-type-selector {
+    display: block;
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
 }
 
 #hidden-lot-select {
@@ -246,6 +257,23 @@ input, select {
     margin: 1rem 0 0;
     width: 50%;
     display: inline-block;
+}
+.route-selection-container .go-btn-container {
+    float: right;
+    text-align: center;
+    width: 45%;
+}
+.route-selection-container .go-btn-container .go-btn {
+    background-color: #1C732F;
+    color: white;
+    height: 40px;
+    width: 50%;
+    max-width: 150px;
+    font-size: 20px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: none;
+    margin: 3rem auto;
 }
 
 #saved-data-indicator {
