updated feedback style

--- a/static/styles/feedback.css
+++ b/static/styles/feedback.css
@@ -20,16 +20,8 @@
   resize: vertical;
 }
 
-#feedbackForm input[type="email"] {
-  width: 80%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  resize: vertical;
-}
-
-#feedbackForm input[type="button"] {
-  padding: 5px 10px;
+#submit-btn {
+  padding: 10px 20px;
   background-color: #C9E03C;
   color: #000000;
   border: none;
@@ -38,6 +30,7 @@
   transition: background-color 0.3s ease;
 }
 
-#feedbackForm input[type="button"]:hover {
+/* Button hover effect */
+#submit-btn:hover {
   background-color: #505a0f;
 }
