--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -14,7 +14,7 @@
 </div>
 <div class="feedback-container">
     <textarea id="feedback" name="feedback" rows="8" cols="50" placeholder="How can we help you?"></textarea><br><br>
-    <button onclick="submitFeedback()">Submit</button>
+    <button onclick="submitFeedback()" id="submit-btn">Submit</button>
 </div>
 
 
